--- a/diycode-sdk/build.gradle
+++ b/diycode-sdk/build.gradle
@@ -47,4 +47,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
