--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
 
+        // butter knife
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.5.1'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,6 +19,7 @@ allprojects {
     repositories {
         jcenter()
     }
+
 }
 
 task clean(type: Delete) {
