--- a/diycode-test/build.gradle
+++ b/diycode-test/build.gradle
@@ -49,4 +49,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile project(':diycode-sdk')
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
