helli.json 测试通过

--- a/diycode-test/src/main/AndroidManifest.xml
+++ b/diycode-test/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
   ~
   ~ Last modified 2017-02-11 00:44:14
   ~
-  -->
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gcssloop.diycode_test">
 
@@ -32,15 +32,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".test_api.LoginTestActivity"
-            android:parentActivityName="com.gcssloop.diycode_test.MainActivity">
+            android:parentActivityName=".MainActivity">
+
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gcssloop.diycode_test.MainActivity" />
+        </activity>
+        <activity android:name=".test_api.TokenTestActivity"
+            android:parentActivityName=".MainActivity">
 
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gcssloop.diycode_test.MainActivity" />
         </activity>
     </application>
 
