--- a/diycode-test/build.gradle
+++ b/diycode-test/build.gradle
@@ -57,5 +57,5 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
-    compile 'us.feras.mdv:markdownview:1.1.0'
+    compile 'com.github.mukeshsolanki:MarkdownView-Android:1.0.3'
 }
