获取 topic 回复列表

--- a/diycode-test/src/main/AndroidManifest.xml
+++ b/diycode-test/src/main/AndroidManifest.xml
@@ -68,6 +68,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gcssloop.diycode_test.MainActivity" />
         </activity>
+        <activity
+            android:name=".test_api.TopicReplyTestActivity"
+            android:parentActivityName=".MainActivity">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gcssloop.diycode_test.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
