--- a/diycode-test/src/main/AndroidManifest.xml
+++ b/diycode-test/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     package="com.gcssloop.diycode_test">
 
     <application
+        android:name=".base.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
