--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -50,4 +50,10 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     testCompile 'junit:junit:4.12'
     compile project(':diycode-sdk')
+
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
