--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    sdk = 25
+    buildTools = "25.0.2"
+    minSdk = 14
+    libraryVersion = "1.0.2"
+    supportVersion = "25.1.0"
+}
