--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -53,6 +53,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.0'
     testCompile 'junit:junit:4.12'
     compile project(':diycode-sdk')
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile project(':expectanim')
 }
