--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -46,13 +46,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
-    testCompile 'junit:junit:4.12'
-    compile project(':diycode-sdk')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.GcsSloop:ViewSupport:v1.3.0'
+    compile project(':diycode-sdk')
     compile project(':expectanim')
 }
