--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.GcsSloop:ViewSupport:v1.3.0'
+    compile 'com.github.gcssloop:ViewSupport:v1.3.0'
     compile project(':diycode-sdk')
     compile project(':expectanim')
 }
