--- a/diycode-test/build.gradle
+++ b/diycode-test/build.gradle
@@ -52,7 +52,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.1.0'
-    //   compile project(':diycode-sdk')
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
@@ -64,6 +63,7 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    compile 'com.github.gcssloop:diycode-sdk:0.0.3'
-    compile project(':gcs-log')
+
+    compile project(':diycode-sdk')
+//    compile 'com.github.gcssloop:diycode-sdk:0.0.3'
 }
