--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.gcssloop.diycode">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:name=".base.BaseApplication"
         android:allowBackup="true"
