--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -29,14 +29,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:name=".base.BaseApplication"
+        android:name=".base.app.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
-            android:name="com.gcssloop.diycode.base.BaseGlideModule"
+            android:name="com.gcssloop.diycode.base.glide.BaseGlideModule"
             android:value="GlideModule"/>
 
         <activity
