--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.gcssloop:ViewSupport:v1.3.0'
-    compile 'com.jakewharton:disklrucache:2.0.2'
+    compile 'com.bm.photoview:library:1.4.1'
     compile project(':diycode-sdk')
     compile project(':expectanim')
 }
