--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
     compile 'com.bm.photoview:library:1.4.1'
     compile project(':diycode-sdk')
     compile project(':expectanim')
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
