添加登录页面

--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -64,6 +64,8 @@
         </activity>
         <activity android:name=".activity.WebActivity">
         </activity>
+        <activity android:name=".activity.LoginActivity">
+        </activity>
     </application>
 
 </manifest>
