--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -64,7 +64,9 @@
         </activity>
         <activity android:name=".activity.WebActivity">
         </activity>
-        <activity android:name=".activity.LoginActivity">
+        <activity android:name=".activity.LoginActivity"
+                  android:windowSoftInputMode="adjustPan"
+            >
         </activity>
     </application>
 
