--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -70,6 +70,8 @@
         </activity>
         <activity android:name=".activity.SettingActivity">
         </activity>
+        <activity android:name=".activity.MyTopicActivity">
+        </activity>
     </application>
 
 </manifest>
