添加关于页面

--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -72,6 +72,8 @@
         </activity>
         <activity android:name=".activity.MyTopicActivity">
         </activity>
+        <activity android:name=".activity.AboutActivity">
+        </activity>
     </application>
 
 </manifest>
