添加通知页面

--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -74,6 +74,8 @@
         </activity>
         <activity android:name=".activity.AboutActivity">
         </activity>
+        <activity android:name=".activity.NotificationActivity">
+        </activity>
     </application>
 
 </manifest>
