--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -62,19 +62,30 @@
             android:name=".activity.ImageActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".activity.WebActivity">
+        <activity
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".activity.WebActivity">
         </activity>
         <activity
+            android:theme="@style/AppTheme.NoActionBar"
             android:name=".activity.LoginActivity"
             android:windowSoftInputMode="adjustPan">
         </activity>
-        <activity android:name=".activity.SettingActivity">
+        <activity
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".activity.SettingActivity">
         </activity>
-        <activity android:name=".activity.MyTopicActivity">
+        <activity
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".activity.MyTopicActivity">
         </activity>
-        <activity android:name=".activity.AboutActivity">
+        <activity
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".activity.AboutActivity">
         </activity>
-        <activity android:name=".activity.NotificationActivity">
+        <activity
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".activity.NotificationActivity">
         </activity>
     </application>
 
