--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.gcssloop:ViewSupport:v1.3.0'
     compile 'com.bm.photoview:library:1.4.1'
+    compile 'com.romandanylyk:pageindicatorview:0.1.2@aar'
     compile project(':diycode-sdk')
     compile project(':expectanim')
 
