--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -31,7 +31,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "v0.0.1 beta"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
