引入本地仓库

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url "http://localhost:8081/repository/gcssloop-central/" }  // 本地仓库
     }
 
 }
