添加 Chrome Cuatom Tabs

--- a/diycode-app/build.gradle
+++ b/diycode-app/build.gradle
@@ -28,7 +28,7 @@ android {
 
     defaultConfig {
         applicationId "com.gcssloop.diycode"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 25
         versionCode 4
         versionName "v0.0.6"
@@ -59,6 +59,7 @@ dependencies {
     compile 'com.github.gcssloop:ViewSupport:v1.3.0'
     compile 'com.bm.photoview:library:1.4.1'
     compile 'com.romandanylyk:pageindicatorview:0.1.2@aar'
+    compile 'com.android.support:customtabs:25.3.0'
     compile project(':diycode-sdk')
     compile project(':expectanim')
     compile project(':recyclerview')
