--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -40,19 +40,14 @@
             android:value="GlideModule"/>
 
         <activity
-            android:theme="@style/theme_splash"
-            android:name=".activity.SplashActivity">
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/theme_splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".activity.UserActivity"
