--- a/diycode-app/src/main/AndroidManifest.xml
+++ b/diycode-app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/theme_splash">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
